fix: redundant word-spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -139,7 +139,6 @@
   color: #fff;
   line-height: 28px;
   text-transform: uppercase;
-  word-spacing: 90%;
   white-space-collapse: collapse;
 }
 
